# VibeShopping-Backend

./: .gitignore  AGENTS.md  BACKEND_BLUEPRINT.md  CLAUDE.md  docker-compose.production.yml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  PRODUCTION_GUIDE.md  README.md  VibeShopping.postman_collection.json  alembic.ini  pyproject.toml  requirements.txt  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_03_25_0617-6a662b397160_initial_schema.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py  constants.py  dependencies.py  exceptions.py  responses.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  address.py  banner.py  cart_item.py  category.py  order.py  order_item.py  payment.py  payment_method.py  product.py  product_image.py  product_variant.py  review.py  user.py  wishlist.py
backend/app/repositories/: address_repo.py  banner_repo.py  base.py  cart_repo.py  category_repo.py  order_repo.py  payment_method_repo.py  payment_repo.py  product_repo.py  review_repo.py  user_repo.py  wishlist_repo.py
backend/app/schemas/: address.py  admin.py  auth.py  banner.py  cart.py  category.py  order.py  payment.py  payment_method.py  product.py  review.py  user.py  wishlist.py
backend/app/services/: address_service.py  admin_service.py  auth_service.py  banner_service.py  cart_service.py  category_service.py  order_service.py  payment_method_service.py  payment_service.py  product_service.py  review_service.py  user_service.py  wishlist_service.py
(+23 files in other folders)
